# phys2denoise

./: .all-contributorsrc  .autorc  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  phys2denoise.py  requirements.txt  setup.cfg  setup.py
.circleci/: artifact_path  config.yml
.github/: config.yml  labeler.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE_MEETING.md
.github/workflows/: pythonpublish.yml
docs/: Makefile  api.rst  cli.rst  conf.py  contributing.rst  contributorfile.rst  howto.rst  index.rst  installation.rst  license.rst  usage.rst
docs/user_guide/: exporting.rst  metrics.rst
phys2denoise/: __init__.py  _version.py  bids.py  due.py  phys2denoise.py  references.py  tasks.py  utils.py  workflow.py
phys2denoise/cli/: app.py  phys2denoise.py  run.py
phys2denoise/metrics/: __init__.py  cardiac.py  cardio.py  chest_belt.py  gas.py  multimodal.py  responses.py  retroicor.py  rvt.py  utils.py
phys2denoise/tests/: conftest.py  test_metrics_cardiac.py  test_metrics_chest_belt.py  test_metrics_utils.py  test_rvt.py  test_tasks.py  test_tasks_integration.py  utils.py
phys2denoise/tests/data/: fake_phys.phys  history.json
