[metadata]
name = phys2denoise
url = https://github.com/physiopy/phys2denoise
download_url = https://github.com/physiopy/phys2denoise
author = The Physiopy Community
maintainer = The Physiopy Community
maintainer_email = physiopy.community@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
license = Apache-2.0
description = A collection of scripts to prepare physiological data for fMRI denoising
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    phys2denoise

[options]
python_requires = >=3.9
install_requires =
    numpy >=1.9.3, <2
    matplotlib
    pandas
    scipy
    duecredit
    loguru
    pydra
    physutils >=0.2.1
tests_require =
    pytest >=5.3
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx>=2.0
    sphinx-argparse
    sphinx_rtd_theme
    myst-parser
style =
    flake8>=4.0
    black
    isort<6.0.0
    pydocstyle
test =
    %(style)s
    pytest >=5.3
    pytest-cov
    peakdet>=0.5.0
    coverage
devtools =
    pre-commit
dev =
    %(devtools)s
    %(doc)s
    %(test)s

[options.entry_points]
console_scripts =
    phys2denoise=phys2denoise.workflow:_main

[flake8]
doctest = True
exclude=
    _version.py
    ./phys2denoise/cli/__init__.py
    ./phys2denoise/tests/*
    versioneer.py
ignore = E126, E402, W503, F401, F811
max-line-length = 88
extend-ignore = E203, E501
extend-select = B950
per-file-ignores =
    workflow.py:D401

[isort]
profile = black
skip_gitignore = true
extend_skip =
    .autorc
    .coverage*
    .readthedocs.yml
    .zenodo.json
    codecov.yml
    setup.py
    versioneer.py
    phys2denoise/_version.py
skip_glob =
    docs/*

[pydocstyle]
convention = numpy
match =
    phys2denoise/*.py
match_dir = phys2denoise/[^tests]*


[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[coverage:run]
branch = True
omit =
    phys2denoise/tests/*
    docs/*
    setup.py
    versioneer.py
    doi.py
    __init__.py
    */__init__.py
    */*/__init__.py

[versioneer]
VCS = git
style = pep440
versionfile_source = phys2denoise/_version.py
versionfile_build = phys2denoise/_version.py
tag_prefix =
parentdir_prefix =
